fix item overlap

--- a/src/components/LazyLoading/index.css
+++ b/src/components/LazyLoading/index.css
@@ -3,7 +3,7 @@
   display: grid;
   place-items: center;
   position: absolute;
-  z-index: 99;
+  z-index: 1;
   top: 0;
   width: 100%;
   height: 100%;
